Style the pizza calculator
This won’t work on mobile devices, though it could be fixed.  It works
well on desktop, though.

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -32,6 +32,8 @@
 .AppBody {
   padding-left: 5vw;
   padding-right: 5vw;
+  display: flex;
+  flex-direction: row;
 }
 
 @keyframes App-logo-spin {
