--- a/client/src/components/pizzas/Calculator.css
+++ b/client/src/components/pizzas/Calculator.css
@@ -1,14 +1,24 @@
 .Calculator {
-  margin: 2vw;
-  padding: 1vw 0 2vw;
-  border: 1px solid #e6e6e6;
   flex: 1;
   align-self: flex-start;
+  margin-left: 4vw;
+}
+
+.Calculator .header {
+  background-color: #fc2e60;
+  height: 6vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  font-size: 32px;
+  margin-top: 2vh;
 }
 
 .Calculator form {
-  border-top: 1px solid #e6e6e6;
+  border: 1px solid #e6e6e6;
   padding-top: 2vw;
+  padding-bottom: 2vw;
   font-size: 2rem;
 }
 
