--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -34,6 +34,7 @@
   padding-right: 5vw;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 @keyframes App-logo-spin {
