[Anna] Adds calculator

--- a/client/src/components/pizzas/Pizzas.css
+++ b/client/src/components/pizzas/Pizzas.css
@@ -3,11 +3,11 @@
 }
 
 .PizzaHeaderRow {
-  height: 6vh;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #44107a;
   color: #ffffff;
   font-size: 32px;
+  padding: 10px;
 }
